# DA

./: .gitignore  README.md  func.cpp  main.cpp  struct.hpp
LaTeX/: kp.tar
LaTeX/kp/: kp.tex
LaTeX/lab01/: lab01.tex
LaTeX/lab02/: da-report-template-2012.tex
LaTeX/lab03/: lab03.tex
LaTeX/lab04/: lab04.tex
LaTeX/lab05/: lab05.tex
LaTeX/lab06/: lab06.tex
LaTeX/lab07/: lab07.tex
LaTeX/lab08/: lab08.aux  lab08.fdb_latexmk  lab08.fls  lab08.tex
LaTeX/lab09/: lab09.tex
LaTeX/lab2/: key.rev
ekz/: bw.cpp
ekz/haffman/: deiksra.cpp  lew.cpp  ls.cpp  (+3 more)
kp/: .gitignore  CMakeLists.txt
kp/src/: CMakeLists.txt  Queue.hpp  main.cpp
kp/src/complex/: Complex.hpp
kp/src/core/: .gitignore  CMakeLists.txt  Shazam.cpp  Shazam.hpp
kp/src/simple/: .gitignore  CMakeLists.txt  Queue.hpp  SimpleVector.cpp  SimpleVector.hpp  gen.py
kp/src/threads/: .gitignore  Threads.hpp
lab01/: .gitignore  CMakeLists.txt  Makefile  Sort.hpp  func.cpp  gen.py  main.cpp  std_sort.cpp  struct.cpp  struct.hpp
lab02/: Makefile  TTree.cpp  TTree.hpp  main.cpp
lab03/: Makefile  StackContainer.hpp  TTree.cpp  TTree.hpp  main.cpp  mktest.py
lab04/: TBor.cpp  TBor.hpp  main.cpp
lab05/: CMakeLists.txt  Makefile  TSuffixTree.cpp  TSuffixTree.hpp  main.cpp
lab05/fuck/: .gitignore
lab05/fuck/checker/: .gitignore  main.cpp  suffixTree.cpp
lab06/: .gitignore  BigInt.cpp  BigInt.hpp  CMakeLists.txt  gen.py  main.cpp
lab07/: gen.py  main.cpp
lab08/: gen.py  main.cpp  nmain.cpp
lab09/: dermo.cpp  kmain.cpp  lexa.cpp  main.cpp  mymain.cpp  nmain.cpp  vmain.cpp
test/: test
(+4 files in other folders)
